fix some text, display in mainPage in dark mode

--- a/static/src/tailwindcustom.css
+++ b/static/src/tailwindcustom.css
@@ -10,6 +10,7 @@
 @layer components {
   * {
     @apply box-border m-0 p-0;
+    --primary-clr: #02c6d4;
   }
 
   /* nice scroll bar */
